--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.intellij' version '0.3.1'
+    id 'org.jetbrains.intellij' version '0.4.9'
 }
 
 group = 'cn.wuzhizhan.idea.mybatis'
@@ -13,10 +13,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'junit:junit:4.12'
 }
 intellij {
-    version = 'IU-2018.1'
+    version = 'IU-2018.3.5'
     pluginName = 'free-idea-mybatis'
     plugins = ['coverage','Spring','DatabaseTools']
     intellij.updateSinceUntilBuild false
