--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
+    testImplementation('junit:junit:4.12')
 }
 intellij {
     version = 'IU-2021.2.3'
