--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,74 +1,82 @@
 <idea-plugin>
-    <id>cn.bestwu.plugin.mybatis</id>
-    <name>Free MyBatis plugin</name>
-    <vendor email="wuzhizhan@wuzhizhan.cn" url="https://github.com/wuzhizhan">wuzhizhan</vendor>
+  <id>cn.bestwu.plugin.mybatis</id>
+  <name>Free MyBatis plugin</name>
+  <vendor email="wuzhizhan@wuzhizhan.cn" url="https://github.com/wuzhizhan">wuzhizhan</vendor>
 
-    <description><![CDATA[
-          Free Mybatis plugin <br/>
-          This Plugin is fork from https://github.com/rockjava/intellij-mybatis-plugin
-      ]]></description>
+  <description><![CDATA[
+    Free Mybatis plugin <br/>
+    This Plugin is fork from https://github.com/rockjava/intellij-mybatis-plugin
+    ]]></description>
 
-    <idea-version since-build="145"/>
-    <depends>com.intellij.database</depends>
-    <depends>com.intellij.spring</depends>
-    <actions>
-        <group id="com.wuzhizhan.mybatis.dbtools.action" class="com.wuzhizhan.mybatis.action.DbToolsMainActionGroup"
-               text="FreeMyBatis"
-               popup="true">
-            <!--生成代码菜单-->
-            <add-to-group group-id="DatabaseViewPopupMenu" anchor="first"/>
-        </group>
+  <idea-version since-build="145"/>
+  <depends>com.intellij.database</depends>
+  <depends>com.intellij.spring</depends>
+  <actions>
+    <group id="com.wuzhizhan.mybatis.dbtools.action"
+      class="com.wuzhizhan.mybatis.action.DbToolsMainActionGroup"
+      text="FreeMyBatis"
+      popup="true">
+      <!--生成代码菜单-->
+      <add-to-group group-id="DatabaseViewPopupMenu" anchor="first"/>
+    </group>
 
-        <action class="com.wuzhizhan.mybatis.action.DemoAction" id="com.wuzhizhan.mybatis.action.demoAction" text="demoAction">
-            <add-to-group group-id="GenerateGroup" anchor="last"/>
-            <keyboard-shortcut keymap="$default" first-keystroke="alt s"/>
-        </action>
-    </actions>
-    <extensions defaultExtensionNs="com.intellij">
-        <dom.fileDescription implementation="com.wuzhizhan.mybatis.dom.description.MapperDescription"/>
-        <dom.fileDescription implementation="com.wuzhizhan.mybatis.dom.description.ConfigurationDescription"/>
-        <definitionsSearch implementation="com.wuzhizhan.mybatis.definitionsearch.MapperDefinitionSearch"/>
-        <projectService serviceImplementation="com.wuzhizhan.mybatis.service.JavaService"/>
-        <projectService serviceImplementation="com.wuzhizhan.mybatis.service.AnnotationService"/>
-        <projectService serviceImplementation="com.wuzhizhan.mybatis.service.EditorService"/>
-        <projectService serviceImplementation="com.wuzhizhan.mybatis.alias.AliasFacade"/>
-        <projectService serviceImplementation="com.wuzhizhan.mybatis.locator.MapperLocator"/>
-        <projectService serviceImplementation="com.wuzhizhan.mybatis.service.TableInfoService"/>
-        <codeInsight.lineMarkerProvider language="JAVA"
-                                        implementationClass="com.wuzhizhan.mybatis.provider.MapperLineMarkerProvider"/>
-        <codeInsight.lineMarkerProvider language="XML"
-                                        implementationClass="com.wuzhizhan.mybatis.provider.StatementLineMarkerProvider"/>
-        <codeInsight.lineMarkerProvider language="JAVA"
-                                        implementationClass="com.wuzhizhan.mybatis.provider.InjectionLineMarkerProvider"/>
-        <applicationConfigurable instance="com.wuzhizhan.mybatis.setting.MybatisConfigurable"/>
-        <applicationService serviceInterface="com.wuzhizhan.mybatis.setting.MybatisSetting"
-                            serviceImplementation="com.wuzhizhan.mybatis.setting.MybatisSetting"/>
-        <completion.contributor language="XML"
-                                implementationClass="com.wuzhizhan.mybatis.contributor.TestParamContributor"/>
-        <completion.contributor language="SQL"
-                                implementationClass="com.wuzhizhan.mybatis.contributor.SqlParamCompletionContributor"
-                                order="first"/>
-        <fileTemplateGroup implementation="com.wuzhizhan.mybatis.template.MybatisFileTemplateDescriptorFactory"/>
-        <typedHandler implementation="com.wuzhizhan.mybatis.action.MybatisTypedHandler" id="mybatis" order="first"/>
-        <defaultLiveTemplatesProvider implementation="com.wuzhizhan.mybatis.template.SqlLiveTemplateProvider"/>
-        <refactoring.elementListenerProvider
-                implementation="com.wuzhizhan.mybatis.refactoring.MapperRefactoringProvider"/>
-        <localInspection language="JAVA" shortName="MybatisMapperMethodInspection"
-                         displayName="Mapper method inspection"
-                         groupName="Mybatis" enabledByDefault="true" level="ERROR"
-                         implementationClass="com.wuzhizhan.mybatis.inspection.MapperMethodInspection"/>
-        <localInspection language="XML" shortName="MybatisMapperXmlInspection" enabledByDefault="true" level="ERROR"
-                         displayName="Mapper xml inspection"
-                         groupName="Mybatis"
-                         implementationClass="com.wuzhizhan.mybatis.inspection.MapperXmlInspection"/>
-        <intentionAction>
-            <className>com.wuzhizhan.mybatis.intention.GenerateParamAnnotationIntention</className>
-        </intentionAction>
-        <intentionAction>
-            <className>com.wuzhizhan.mybatis.intention.GenerateStatementIntention</className>
-        </intentionAction>
-        <intentionAction order="first">
-            <className>com.wuzhizhan.mybatis.intention.GenerateMapperIntention</className>
-        </intentionAction>
-    </extensions>
+    <action class="com.wuzhizhan.mybatis.action.DemoAction"
+      id="com.wuzhizhan.mybatis.action.demoAction" text="demoAction">
+      <add-to-group group-id="GenerateGroup" anchor="last"/>
+      <keyboard-shortcut keymap="$default" first-keystroke="alt s"/>
+    </action>
+  </actions>
+  <extensions defaultExtensionNs="com.intellij">
+    <dom.fileDescription implementation="com.wuzhizhan.mybatis.dom.description.MapperDescription"/>
+    <dom.fileDescription
+      implementation="com.wuzhizhan.mybatis.dom.description.ConfigurationDescription"/>
+    <definitionsSearch
+      implementation="com.wuzhizhan.mybatis.definitionsearch.MapperDefinitionSearch"/>
+    <projectService serviceImplementation="com.wuzhizhan.mybatis.service.JavaService"/>
+    <projectService serviceImplementation="com.wuzhizhan.mybatis.service.AnnotationService"/>
+    <projectService serviceImplementation="com.wuzhizhan.mybatis.service.EditorService"/>
+    <projectService serviceImplementation="com.wuzhizhan.mybatis.alias.AliasFacade"/>
+    <projectService serviceImplementation="com.wuzhizhan.mybatis.locator.MapperLocator"/>
+    <projectService serviceImplementation="com.wuzhizhan.mybatis.service.TableInfoService"/>
+    <codeInsight.lineMarkerProvider language="JAVA"
+      implementationClass="com.wuzhizhan.mybatis.provider.MapperLineMarkerProvider"/>
+    <codeInsight.lineMarkerProvider language="XML"
+      implementationClass="com.wuzhizhan.mybatis.provider.StatementLineMarkerProvider"/>
+    <codeInsight.lineMarkerProvider language="JAVA"
+      implementationClass="com.wuzhizhan.mybatis.provider.InjectionLineMarkerProvider"/>
+    <applicationConfigurable instance="com.wuzhizhan.mybatis.setting.MybatisConfigurable"/>
+    <applicationService serviceInterface="com.wuzhizhan.mybatis.setting.MybatisSetting"
+      serviceImplementation="com.wuzhizhan.mybatis.setting.MybatisSetting"/>
+    <completion.contributor language="XML"
+      implementationClass="com.wuzhizhan.mybatis.contributor.TestParamContributor"/>
+    <completion.contributor language="SQL"
+      implementationClass="com.wuzhizhan.mybatis.contributor.SqlParamCompletionContributor"
+      order="first"/>
+    <fileTemplateGroup
+      implementation="com.wuzhizhan.mybatis.template.MybatisFileTemplateDescriptorFactory"/>
+    <typedHandler implementation="com.wuzhizhan.mybatis.action.MybatisTypedHandler" id="mybatis"
+      order="first"/>
+    <defaultLiveTemplatesProvider
+      implementation="com.wuzhizhan.mybatis.template.SqlLiveTemplateProvider"/>
+    <refactoring.elementListenerProvider
+      implementation="com.wuzhizhan.mybatis.refactoring.MapperRefactoringProvider"/>
+    <localInspection language="JAVA" shortName="MybatisMapperMethodInspection"
+      displayName="Mapper method inspection" hasStaticDescription="false"
+      groupName="Mybatis" enabledByDefault="true" level="ERROR"
+      implementationClass="com.wuzhizhan.mybatis.inspection.MapperMethodInspection"/>
+    <localInspection language="XML" shortName="MybatisMapperXmlInspection" enabledByDefault="true"
+      level="ERROR"
+      displayName="Mapper xml inspection"
+      groupName="Mybatis" hasStaticDescription="false"
+      implementationClass="com.wuzhizhan.mybatis.inspection.MapperXmlInspection"/>
+    <intentionAction>
+      <className>com.wuzhizhan.mybatis.intention.GenerateParamAnnotationIntention</className>
+    </intentionAction>
+    <intentionAction>
+      <className>com.wuzhizhan.mybatis.intention.GenerateStatementIntention</className>
+    </intentionAction>
+    <intentionAction order="first">
+      <className>com.wuzhizhan.mybatis.intention.GenerateMapperIntention</className>
+    </intentionAction>
+  </extensions>
 </idea-plugin>
