--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,12 @@ patchPluginXml {
      """
 }
 
+java {
+    sourceCompatibility(JavaVersion.VERSION_1_8)
+    targetCompatibility(JavaVersion.VERSION_1_8)
+}
+
+
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
