--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>cn.bestwu.plugin.mybatis</id>
   <name>Free MyBatis plugin</name>
-  <vendor email="wuzhizhan@wuzhizhan.cn" url="https://github.com/wuzhizhan">wuzhizhan</vendor>
+  <vendor email="piterwu@outlook.com" url="https://github.com/top-bettercode">piterwu</vendor>
 
   <description><![CDATA[
     Free Mybatis plugin <br/>
