插件配置调整

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,6 +9,9 @@
     ]]></description>
 
   <idea-version since-build="145"/>
+  <depends>com.intellij.modules.platform</depends>
+  <depends>com.intellij.modules.lang</depends>
+  <depends>com.intellij.modules.java</depends>
   <depends>com.intellij.database</depends>
   <depends>com.intellij.spring</depends>
   <actions>
